--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,12 @@
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": false,
-    "noImplicitAny": false
+    "removeComments": true,
+    "noImplicitAny": false,
+    "allowJs": true,
+    "lib": [
+            "ES6"
+        ]
   },
   "exclude": [
     "node_modules",
