--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/acc-agvaldezc/typescript-workshop#readme",
   "dependencies": {
+    "colors": "^1.3.0",
     "ts-node": "^6.1.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
